src/styles/_global.scss
@import './variables';
@import './theme';

#root,
html,
body {
  background: $main-background-color;
  font-family: proxima_nova;
  font-size: 14px;
  color: $black;
}

html {
  min-height: 100%;
  position: relative;
  #root {
    display: flex;
    flex-direction: column;
    height: 100%;
    flex: 1 0 auto;
  }
}

.app-content {
  margin-bottom: 100px;
}

a:hover {
  text-decoration: none;
}

button {
  outline: none !important;
}

p {
  margin: 0;
}

input.form-control,
select.form-control,
textarea.form-control {
  background: #f9f9f9;
}

.card {
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.custom-checkbox .custom-control-input:checked ~ .custom-control-label::after {
  background-size: 76%;
}

.custom-control-label[type='checkbox'] {
  font-size: 14px;
  &::before,
  &::after {
    border-radius: 2px;
    width: 16px;
    height: 16px;
    top: 3px;
  }
  & > div {
    margin-left: 12px;
  }
}

.was-validated .form-control:valid,
.form-control.is-valid,
.was-validated .form-control:invalid,
.form-control.is-invalid {
  background-image: none !important;
}
.btn:focus,
.btn.focus,
.btn-outline-primary:not(:disabled):not(.disabled):active:focus,
.btn-outline-primary:not(:disabled):not(.disabled).active:focus,
.show > .btn-outline-primary.dropdown-toggle:focus,
.btn-outline-primary:focus,
.btn-outline-primary.focus,
.custom-control-input:focus ~ .custom-control-label::before,
.form-control:focus,
.was-validated .form-control:valid:focus,
.form-control.is-valid:focus,
.was-validated .form-control:invalid:focus,
.form-control.is-invalid:focus {
  box-shadow: none;
}

.was-validated .custom-control-input:valid ~ .custom-control-label {
  color: $black;
}

.form-group {
  margin-bottom: 0;
  .form-label {
    font-size: 12px;
    opacity: 0.5;
    margin-bottom: 6px;
    text-transform: uppercase;
  }
  textarea {
    border-radius: 10px;
  }
}

input.form-control {
  border-radius: 10px;
  min-height: 40px;
  border: 1px solid #d4d4d4;
}

button.btn-lg {
  font-size: 18px;
  border-radius: 6px;
  margin-top: 32px;
  text-transform: uppercase;
}

.line-ellipsis {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.btn-dark {
  color: $white;
}

.h1-title {
  font-size: 36px;
}

.h2-title {
  font-size: 32px;
}

.h3-title {
  font-size: 24px;
}

.h4-title {
  font-size: 18px;
}

.p-lg {
  font-size: 16px;
}

.p-md {
  font-size: 14px;
}

.p-sm {
  font-size: 12px;
}

.opacity-5 {
  opacity: 0.5;
}

.cursor-pointer {
  cursor: pointer;
}

.border-default-color {
  border-color: rgba(0, 0, 0, 0.1) !important;
}

.font-weight-semibold {
  font-weight: 600;
}

.auth-form-header {
  font-size: 36px;
  font-weight: 600;
  font-family: 'proxima_nova';
  @media screen and (max-width: 768px) {
    font-size: 30px;
  }
}

.card-footer-bg-color {
  background-color: $white;
}

.link-size {
  font-size: 14px;
  font-weight: 600;
}

@include media-breakpoint-between(xs, sm) {
  .groups-list-container,
  .group-admin-area-applications,
  .group-admin-area {
    background: none;
    border: none;
    box-shadow: none;
    & > .card-header {
      background: none;
      border: none;
      padding: 0 !important;
    }
  }

  .members-search-nav {
    background: none !important;
    border-bottom: none !important;
    .navbar-nav {
      a {
        border-bottom: 3px solid transparent;
        &.active {
          border-bottom-color: $primary;
        }
      }
      & > div:first-child {
        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
      }
    }
  }
}

@include media-breakpoint-only(xs) {
  .btn-block-xs-only {
    display: block;
    width: 100%;
  }
}

